--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <article>
-        <fieldset>
+        <fieldset width="400px">
             <img src="dmt_elves.jpg" width="450px" alt="dmt elves">
         <h1>DMT Elves</h1>
-        <p size="20px">The DMT elves usualy appear in people's DMT trips. They are interdimmensional beings that can not be percieved by the naked eye. While tripping on DMT, one sees with the spirit and is able to interact with them.Many people reported that the elves were intrigued by them and were astonished that they could see them and taught them various elves arts, like magic.</p>
+        <p>The DMT elves usualy appear in people's DMT trips. They are interdimmensional beings that can not be percieved by the naked eye. While tripping on DMT, one sees with the spirit and is able to interact with them.Many people reported that the elves were intrigued by them and were astonished that they could see them and taught them various elves arts, like magic.</p>
         </fieldset>
         <fieldset>
             <h2>Ayahuaska</h2>
